# shepherd

./: .editorconfig  .flake8  .gitconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE  Pipfile  README.md  TODO.md  app.py  baseline.txt  change_note.md  favicon.xcf  flake.nix  helper.py  pyproject.toml  setup.py
.github/workflows/: build_nix.yml  flakehell.yml  node.js.yml  release.yml
crates/shepherd-app/: Cargo.toml
crates/shepherd-app/src/: control.rs  error.rs  files.rs  main.rs  patch.rs  upload.rs
crates/shepherd-common/: Cargo.toml
crates/shepherd-common/src/: args.rs  config.rs  lib.rs
crates/shepherd-mqtt/: Cargo.toml
crates/shepherd-mqtt/src/: client.rs  lib.rs  messages.rs  util.rs
crates/shepherd-run/: Cargo.toml
crates/shepherd-run/src/: main.rs  runner.rs  usercode.rs
crates/shepherd-watch/: Cargo.toml
crates/shepherd-watch/src/: main.rs
crates/shepherd-ws/: Cargo.toml
crates/shepherd-ws/src/: buffer.rs  dispatch.rs  main.rs  receiver.rs  ws.rs
doc/: channels.md  design.md  dev.md  runner.md
doc/api/: http.md  mqtt.md  ws.md
docs.robocon.uk/: .gitignore  README.md  astro.config.mjs  flake.nix  package-lock.json  package.json  tailwind.config.mjs
docs.robocon.uk/scripts/: fix-links-brain.sh
docs.robocon.uk/src/: styling.css
docs.robocon.uk/src/components/: RoboConDocsLogo.astro
docs.robocon.uk/src/content/docs/: 404.md  index.mdx
robotsrc/: another.xml  blockly_project.xml  blocks.json  hello.py  main.py  me.py  new_project.py  nice_robot.py
runner/: enums.py  reaper.py  start.py
scripts/: patchtool-apply.sh  patchtool-clean.sh  patchtool-mk.sh  patchtool-verify.sh  robot_reset.py  shepherd-status.sh  usercode.py
sheep/: package-lock.json  package.json
sheepsrc/: .npmrc  package-lock.json  package.json  tsconfig.json  webpack.config-dev.js  webpack.config.js
sheepsrc/app/: App.vue  index.ts  prism.js  prism.scss  store.ts  styles.scss  template.html  variables.scss  xml-shim.d.ts
sheepsrc/app/components/: IconButton.vue  Messages.vue  ProjectTab.vue
sheepsrc/app/components/dialog/: CreateProjectDialog.vue  DeleteProjectDialog.vue  DialogWrapper.vue
sheepsrc/app/components/editor/: Editor.vue  Tabs.vue
sheepsrc/app/components/sidebar/: Sidebar.vue
sheepsrc/docs/: README.md  batteries.md  block-editor.md  charging.md  collecting-images-and-raw-analysis.md  connecting.md  editor.md  expanding-functionality.md  gpio.md  hello-challenges.md  hello-gpio.md  hello-motors.md  hello-servos.md  hello-vision.md  hello-world.md  init-robot.md  kit-list-of-parts.md  learning-python.md  markers.md  minibot-assembly.md  motors-activity.md  motors.md  patching-the-robot.md  rules.md  running-code-from-a-usb.md  servos.md  the-brainbox.md  transform.js  troubleshooting.md  turning-everything-on.md  uploading.md  vision.md  zones.md
sheepsrc/docs/.vuepress/: categories.json  config.js  override.styl
sheepsrc/docs/.vuepress/components/: BlocklySnippet.vue
sheepsrc/docs/.vuepress/public/: main.py
shepherd/: __init__.py  competition.py  websocks.py
shepherd/blueprints/: editor.py  pyls.py
shepherd/blueprints/editor/: 11.bundle.js  12.bundle.js  14.bundle.js  15.bundle.js  19.bundle.js  2.bundle.js  22.bundle.js  23.bundle.js  24.bundle.js  27.bundle.js  28.bundle.js  30.bundle.js  34.bundle.js  35.bundle.js  36.bundle.js  37.bundle.js  38.bundle.js  39.bundle.js  4.bundle.js  41.bundle.js  42.bundle.js  45.bundle.js  48.bundle.js  50.bundle.js  52.bundle.js  53.bundle.js  9.bundle.js  __init__.py  bundle.js
shepherd/blueprints/pyls/: __init__.py
shepherd/blueprints/run/: __init__.py
shepherd/blueprints/staticroutes/: __init__.py
shepherd/blueprints/staticroutes/docs/: 404.html  batteries.html  block-editor.html  charging.html  collecting-images-and-raw-analysis.html  connecting.html  editor.html  enabling-and-disabling-power.html  expanding-functionality.html  gpio.html  hello-challenges.html  hello-gpio.html  hello-motors.html  hello-servos.html  hello-vision.html  hello-world.html  index.html  init-robot.html  kit-list-of-parts.html  learning-python.html  libraries.html  markers.html  minibot-assembly.html  motors-activity.html  motors.html  patching-the-robot.html  rules.html  running-code-from-a-usb.html  servos.html  simple.py  the-brainbox.html  troubleshooting.html  turning-everything-on.html  uploading.html  vision.html  zones.html
shepherd/blueprints/staticroutes/editor/: 0.bundle.js  10.bundle.js  11.bundle.js  12.bundle.js  13.bundle.js  14.bundle.js  15.bundle.js  16.bundle.js  17.bundle.js  18.bundle.js  19.bundle.js  2.bundle.js  20.bundle.js  21.bundle.js  22.bundle.js  23.bundle.js  24.bundle.js  25.bundle.js  26.bundle.js  27.bundle.js  28.bundle.js  29.bundle.js  3.bundle.js  30.bundle.js  31.bundle.js  32.bundle.js  33.bundle.js  34.bundle.js  35.bundle.js  36.bundle.js  37.bundle.js  38.bundle.js  39.bundle.js  4.bundle.js  40.bundle.js  41.bundle.js  42.bundle.js  43.bundle.js  44.bundle.js  45.bundle.js  (+18 more)
shepherd/blueprints/upload/: __init__.py
shepherd/static/: iframeResizer.contentWindow.min.js  iframeResizer.min.js
shepherd/static/docs/: 404.html  block-editor.html  index.html
shepherd/static/editor/: 0.bundle.js  10.bundle.js  11.bundle.js  12.bundle.js  13.bundle.js  14.bundle.js  15.bundle.js  16.bundle.js  17.bundle.js  18.bundle.js  19.bundle.js  2.bundle.js  20.bundle.js  21.bundle.js  22.bundle.js  23.bundle.js  24.bundle.js  25.bundle.js  26.bundle.js  27.bundle.js  28.bundle.js  29.bundle.js  3.bundle.js  30.bundle.js  31.bundle.js  32.bundle.js  33.bundle.js  34.bundle.js  35.bundle.js  36.bundle.js  37.bundle.js  38.bundle.js  39.bundle.js  4.bundle.js  40.bundle.js  41.bundle.js  42.bundle.js  43.bundle.js  44.bundle.js  45.bundle.js  (+17 more)
shepherd/static/styles/: base.css  page.css
shepherd/templates/: about.html  base.html  index.html  page.html
static/: README.md  index.html  styles.css
usercode/projects/: blocks.json  me.py
wiki/: Home.md  Sheep-the-basics.md  Shepherd-the-basics.md  Tool's-required-for-updating.md
(+416 files in other folders)
