[workspace]
resolver = "2"
members = [
    "crates/shepherd-app",
    "crates/shepherd-common",
    "crates/shepherd-mqtt",
    "crates/shepherd-run",
    "crates/shepherd-ws",
]

[workspace.package]
edition = "2024"
authors = ["Nathan Gill <nathan.j.gill@outlook.com>"]
license = "BSD-2-Clause"

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["multipart"] }
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
fs_extra = "1.3.0"
futures = "0.3.32"
futures-util = "0.3.32"
hopper = { git = "https://github.com/systemetric/hopper", rev = "v0.1.2", version = "0.1.2" }
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.51.1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync"] }
tokio-gpiod = "0.3.0"
tokio-tungstenite = "0.29.0"
toml = "1.1.2"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tower-service = "0.3.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zip = "8.5.1"
