[workspace]
resolver = "2"
members = [
    "crates/shepherd-app",
    "crates/shepherd-common",
    "crates/shepherd-mqtt",
    "crates/shepherd-run",
    "crates/shepherd-watch",
    "crates/shepherd-ws",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nathan Gill <n@ngill.net>"]
license = "BSD-2-Clause"

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["multipart"] }
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
fs_extra = "1.3.0"
futures = "0.3.32"
futures-util = "0.3.32"
hopper = { git = "https://github.com/systemetric/hopper", rev = "v0.1.3", version = "0.1.3" }
nix = { version = "0.31.3", features=["fs", "user"] }
rumqttc = { version = "0.25.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.51.1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync"] }
tokio-gpiod = { git = "https://github.com/systemetric/gpiod-rs", rev = "v0.3.2", version = "0.3.2" }
tokio-tungstenite = "0.29.0"
toml = "1.1.2"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tower-service = "0.3.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2.5.0"
zip = "8.5.1"
