[package]
name = "shepherd-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
fs_extra.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
zip.workspace = true

shepherd-common = { path = "../shepherd-common" }
shepherd-mqtt = { path = "../shepherd-mqtt" }
