[package]
name = "shepherd-run"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
hopper.workspace = true
serde.workspace = true
serde_json.workspace = true
shepherd-common = { path = "../shepherd-common" }
shepherd-mqtt = { path = "../shepherd-mqtt" }
tokio.workspace = true
tokio-gpiod.workspace = true
tracing.workspace = true
