[package]
name = "shepherd-watch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
serde_json.workspace = true
shepherd-common = { path = "../shepherd-common" }
shepherd-mqtt = { path = "../shepherd-mqtt" }
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
